[project]
name = "cascadia-vlm-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.61.0",
    "ipykernel>=7.1.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
    "ultralytics>=8.4.10",
]
